fix: Make dividers bleed to edge of dropdown
BREAKING CHANGE: This includes a potential visual breaking change, since it restructures the way margins and padding work. If any consumers are using the Menu in non-standard ways, such as creating a section at the top of the dropdown that bleeds all the way to the edges by using a negative margin to override the dropdown container's padding, those could break.

Under the new model, instead of the container using padding to add space, the *content* is responsible for setting its own margins. (This is handled within the component, so consumers don't have to do anything - but as mentioned above, they could run into problems if they had been overriding either the margin or padding.)

--- a/draft-packages/menu/KaizenDraft/Menu/components/MenuContent.module.scss
+++ b/draft-packages/menu/KaizenDraft/Menu/components/MenuContent.module.scss
@@ -16,7 +16,7 @@ $side-padding: 1/2 * $ca-grid;
   color: $kz-color-wisteria-800;
   border-radius: $kz-border-solid-border-radius;
   box-shadow: $kz-shadow-large-box-shadow;
-  padding: 6px 4px;
+  padding: 6px 0;
   text-align: left;
   width: 100%;
 
@@ -28,6 +28,7 @@ $side-padding: 1/2 * $ca-grid;
 .header {
   padding: 10px $side-padding 5px;
   color: $kz-color-wisteria-800;
+  margin: 0 4px;
 }
 
 .header__title {
@@ -48,6 +49,7 @@ $side-padding: 1/2 * $ca-grid;
   border: none;
   text-align: left;
   padding: 8px $side-padding;
+  margin: 0 4px;
   min-height: 1.75 * $ca-grid;
   border-radius: 4px;
   font-family: $kz-typography-paragraph-body-font-family;
